--- a/Site web/startbootstrap-freelancer-gh-pages/css/freelancer.css
+++ b/Site web/startbootstrap-freelancer-gh-pages/css/freelancer.css
@@ -7,12 +7,7 @@ body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow-x: hidden;
 }
-.row-eq-height {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display:         flex;
-}
+
 p {
   font-size: 20px;
 }
@@ -28,12 +23,24 @@ a.active {
   outline: none;
 }
 h1,
-h2,
+h2 {
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+}
 h4{ 
 	text-decoration : underline;
 	font-weight : 800;
+	padding-bottom : 1em;
 }
-h3,
+h3 {
+	margin-bottom: 50px;
+text-transform: none;
+font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
+font-size: 16px;
+font-style: italic;
+font-weight: 400;
+}
 h5,
 h6 {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -100,6 +107,7 @@ header {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
+	height : 100%;
     -o-background-size: cover;
 }
 header .container {
@@ -152,6 +160,22 @@ header .intro-text .skills {
 .navbar-custom .navbar-brand.active {
   color: white;
 }
+
+.navbar-custom .navbar-ln {
+  color:white;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  padding : 0.3em;
+  margin-left: 1em;
+}
+.navbar-custom .navbar-ln:hover,
+.navbar-custom .navbar-ln:focus,
+.navbar-custom .navbar-ln:active,
+.navbar-custom .navbar-ln.active {
+  color: #666;
+  text-decoration: underline;
+}
+
 .navbar-custom .navbar-nav {
   letter-spacing: 1px;
 }
@@ -186,6 +210,8 @@ header .intro-text .skills {
   border-color: #EAA613;
   background-color: #F8CE44;
 }
+
+
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
   background-color: #EAA613;
@@ -242,9 +268,7 @@ section h3.section-subheading {
     font-style: italic;
     font-weight: 400;
 }
-section.success {
-  color: #999;
-}
+
 
 
 @media (max-width: 767px) {
@@ -258,23 +282,24 @@ section.success {
 
 
 .square-white{
-  background-color: #f1f1f1;
-  color : #333;
+  background-color: #F5F4E8;
+  color : #C68802;
   border: 2px solid #EAA613;
   line-height: 40px;
-  text-align: justify;
-  font-weight: 800;
-  margin-bottom : 4em;
+  text-align: left;
+  font-weight: 900;
+  font-size : 120%;
+
 }
 
 .square-orange{
   background-color: #F8CE44;
-  color:#333;
+  color: white;
   border: 2px solid #EAA613;
   line-height: 40px;
-  text-align: justify;
-  font-weight: 800;
-  margin-bottom : 4em;
+  text-align: left;
+  font-weight: 900;
+  font-size : 120%;
 }
 
 ul.b {
@@ -657,7 +682,7 @@ fieldset[disabled] .btn-success.active {
   border: none;
   min-height: 100%;
   padding: 100px 0;
-  text-align: center;
+  text-align: left;
 }
 .portfolio-modal .modal-content h2 {
   margin: 0;
