--- a/Site web/startbootstrap-freelancer-gh-pages/css/freelancer.css
+++ b/Site web/startbootstrap-freelancer-gh-pages/css/freelancer.css
@@ -111,7 +111,7 @@ header {
     -o-background-size: cover;
 }
 header .container {
-  padding-top: 100px;
+  padding-top: 300px;
   padding-bottom: 50px;
 }
 header img {
@@ -128,6 +128,8 @@ header .intro-text .name {
 header .intro-text .skills {
   font-size: 1.25em;
   font-weight: 300;
+  text-shadow: 0px 0px 40px black;
+ 
 }
 @media (min-width: 768px) {
   header .container {
@@ -153,6 +155,7 @@ header .intro-text .skills {
 }
 .navbar-custom .navbar-brand {
   color: white;
+  text-shadow: 0.1em 0.05em 2px black;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
@@ -167,6 +170,7 @@ header .intro-text .skills {
   font-size: 0.8em;
   padding : 0.3em;
   margin-left: 1em;
+  
 }
 .navbar-custom .navbar-ln:hover,
 .navbar-custom .navbar-ln:focus,
@@ -203,6 +207,22 @@ header .intro-text .skills {
   color: white;
   background: #F8CE44;
 }
+
+.navbar-custom .navbar-lg {
+  color:white;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  margin-left: 1em;
+  margin-top: 1em;
+  
+}
+.navbar-custom .navbar-lg:hover,
+.navbar-custom .navbar-lg:focus,
+.navbar-custom .navbar-lg:active,
+.navbar-custom .navbar-lg.active {
+  color: #666;
+  text-decoration: underline;
+}
 .navbar-custom .navbar-toggle {
   color:white;
   text-transform: uppercase;
@@ -227,7 +247,7 @@ header .intro-text .skills {
 	
   }
   .navbar-custom .navbar-brand {
-    font-size: 2em;
+    font-size: 1.4em;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;
@@ -240,6 +260,26 @@ header .intro-text .skills {
     font-size: 1.5em;
 	color: white;
   }
+}
+@media (min-width : 992px){
+.navbar-custom .navbar-brand {
+    font-size: 2em;
+}
+}	
+@media (max-width : 767px){
+	.navbar-custom .navbar-brand {
+		font-size: 1em;
+	}	
+}
+@media (max-width : 340px){
+	.navbar-custom .navbar-brand {
+		font-size: 0.8em;
+	}	
+}
+@media (max-width : 305px){
+	.navbar-custom .navbar-brand {
+		font-size: 60%;
+	}	
 }
 @media (min-width: screen-sm-min) {
   .navbar-custom {
@@ -283,12 +323,13 @@ section h3.section-subheading {
 
 .square-white{
   background-color: #F5F4E8;
-  color : #C68802;
+  color : #EAA613;
   border: 2px solid #EAA613;
   line-height: 40px;
   text-align: left;
   font-weight: 900;
   font-size : 120%;
+  margin-bottom: 4em;
 
 }
 
@@ -300,6 +341,7 @@ section h3.section-subheading {
   text-align: left;
   font-weight: 900;
   font-size : 120%;
+  margin-bottom: 4em;
 }
 
 ul.b {
