--- a/Site web/startbootstrap-freelancer-gh-pages/css/freelancer.css
+++ b/Site web/startbootstrap-freelancer-gh-pages/css/freelancer.css
@@ -347,6 +347,9 @@ section h3.section-subheading {
 ul.b {
     list-style-type: disc ;
 }
+ul.c {
+    list-style-type: none ;
+}
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
@@ -579,18 +582,17 @@ footer .footer-below {
   background-color: #233140;
 }
 .btn-outline {
-  color: white;
+  color: #18BC9C;
   font-size: 20px;
   border: solid 2px white;
   background: transparent;
   transition: all 0.3s ease-in-out;
-  margin-top: 15px;
 }
 .btn-outline:hover,
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-  color: #18BC9C;
+  color: #333;
   background: white;
   border: solid 2px white;
 }
@@ -690,7 +692,7 @@ fieldset[disabled] .btn-success.active {
   border: 2px solid white;
   border-radius: 100%;
   text-align: center;
-  font-size: 20px;
+  font-size: 1.5em;
   line-height: 45px;
 }
 .btn:focus,
