--- a/Site web/Real-Estate/css/freelancer.css
+++ b/Site web/Real-Estate/css/freelancer.css
@@ -3,16 +3,27 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
-body {
+body
+{
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow-x: hidden;
 }
 
 p {
-  font-size: 20px;
-}
+  font-size: 23px;
+font-family: Georgia,Times,Arial,sans-serif; 
+font-weight : 600;
+
+  }
 p.small {
   font-size: 16px;
+}
+.centered{
+	text-align : center;
+}
+.w i{
+	color : #EAA613;
+	font-size : 30px;
 }
 a,
 a:hover,
@@ -29,10 +40,10 @@ h2 {
     font-weight: 700;
 }
 h4{ 
-	text-decoration : underline;
 	font-weight : 800;
-	font-size: 1.3em;
-	padding-bottom : 1em;
+	font-size: 1.5em;
+	padding-left : 0.5em;
+	padding-right : 0.5em;
 }
 h3 {
 	margin-bottom: 50px;
@@ -47,9 +58,6 @@ h6 {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
-}
-.bg-darkest-gray {
-    background-color: #fff;
 }
 
 hr.star-light,
@@ -88,15 +96,29 @@ hr.star-primary:after {
 .img-centered {
   margin: 0 auto;
 }
-.bg-light-gray {
+/*.bg-light-gray {
     background-color: #f7f7f7;
 	color : black;
-  text-shadow: 0px 0px 5px white;
+  text-shadow: 0px 0px 5px white, 0px 0px 7px white;
+}
+.bg-broke-white{
+	background-color : #FFFBDC;
+	color : #333;
 }
 
 .bg-darkest-gray {
      background-color: #f7f7f7;
 	 color : #333;
+}*/
+
+.bg-light-gray {
+    background-color: #f7f7f7;
+}
+
+.bg-darkest-gray {
+    background-color: #fff;
+	color : black;
+	font-weight : 500;
 }
 
 
@@ -131,9 +153,10 @@ header .intro-text .name {
 }
 header .intro-text .skills {
   font-size: 1.25em;
-  font-weight: 300;
+font-family: Georgia,Times,Arial,sans-serif; 
+  font-weight: 500;
   color : #f7f7f7;
-  text-shadow: 2px 2px 3px black, -2px -2px 3px black;
+  text-shadow: 4px 5px 3px black, 0px 0px 5px black
  
 }
 @media (min-width: 768px) {
@@ -190,10 +213,10 @@ header .intro-text .skills {
 }
 .navbar-custom .navbar-nav li a {
   color: white;
-  background: #EAA613;
+  background: #F8CE44;
 }
 .navbar-custom .navbar-nav li a:hover {
-  color: #F8CE44;
+  color: #777;
   outline: none;
   background: #EAA613;
 }
@@ -210,7 +233,7 @@ header .intro-text .skills {
 .navbar-custom .navbar-nav li.active a:focus,
 .navbar-custom .navbar-nav li.active a:active {
   color: white;
-  background: #F8CE44;
+  background: #EAA613;
 }
 
 .navbar-custom .navbar-lg {
@@ -259,7 +282,7 @@ header .intro-text .skills {
   }
   .navbar-custom.affix {
     padding: 10px 0;
-    background-color: #EAA613;
+    background-color: #F8CE44;
   }
   .navbar-custom.affix .navbar-brand {
     font-size: 1.5em;
@@ -304,11 +327,11 @@ width : auto;
 }
 @media (min-width: screen-sm-min) {
   .navbar-custom {
-	  background : #EAA613;
+	  background : #F8CE44;
   }
 }
 section {
-  padding: 100px 0;
+  padding: 20px 0;
   color :#999;
    
 }
@@ -320,12 +343,11 @@ section h2.section-heading {
     margin-top: 0;
     margin-bottom: 10px;
     font-size: 40px;
-	
-  text-shadow: 0px 0px 20px white;
+	font-family: Georgia,Times,Arial,sans-serif; 
 }
 
 section h3.section-subheading {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     text-transform: none;
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 20px;
@@ -345,46 +367,51 @@ section h3.section-subheading {
 }
 
 
-.square-white{
-  background-color: #F5F4E8;
-  color : #EAA613;
-  border: 2px solid #EAA613;
-  line-height: 40px;
-  text-align: left;
-  font-weight: 900;
-  font-size : 120%;
-  margin-bottom: 4em;
-
-}
-
 .square-orange{
   background-color: #F8CE44;
-  color: #999;
-  border: 2px solid #EAA613;
+  color: black;
   line-height: 40px;
   text-align: left;
   font-weight: 900;
-  font-size : 120%;
-  margin-bottom: 4em;
+  font-size : 100%;
+  margin-bottom: 3em;
+  font-family: Georgia,Times,Arial,sans-serif; 
 }
 
+.square{
+  background-color: #F8CE44;
+  color: black;
+  line-height: 40px;
+  text-align: left;
+  font-weight: 900;
+  font-size : 100%;
+  font-family: Georgia,Times,Arial,sans-serif; 
+}
+
+@media (max-width: 767px) {
+  .square {
+    margin-bottom: 3em;
+  }
+}
 ul.b {
     list-style-type: disc ;
 }
+
 ul.c {
     list-style-type: none ;
 }
 
+
 #service {
-	/*background-attachment: scroll;
-    background-image: url(../img/Services.png);
+	background-attachment: scroll;
+    background-image: url(../img/Tour.jpg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
-	height : 100%;
-    -o-background-size: cover;*/
+    -o-background-size: cover;
+	
 }
 
 #portfolio .portfolio-item {
@@ -468,16 +495,17 @@ ul.c {
 /*test*/
 
 #team {
-	/* background-attachment: scroll;
-    background-image: url(../img/Services.png);
+	 background-attachment: scroll;
+    background-image: url(../img/Services.jpg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
-	height : 100%;
-    -o-background-size: cover;*/
+
+    -o-background-size: cover;
 }
+
 #team .team-item {
     right: 0;
     margin: 0 0 15px;
@@ -551,6 +579,7 @@ ul.c {
 #team * {
     z-index: 2;
 }
+
 .floating-label-form-group {
   position: relative;
   margin-bottom: 0;
@@ -631,9 +660,9 @@ footer .footer-below {
   background-color: #233140;
 }
 .btn-outline {
-  color: #18BC9C;
+  color: black;
   font-size: 20px;
-  border: solid 2px white;
+  text-decoration : underline;
   background: transparent;
   transition: all 0.3s ease-in-out;
 }
@@ -641,9 +670,8 @@ footer .footer-below {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-  color: #333;
-  background: white;
-  border: solid 2px white;
+  color: #999;
+ text-shadow : none;
 }
 .btn-primary {
   color: white;
@@ -735,15 +763,14 @@ fieldset[disabled] .btn-success.active {
   background-color: white;
 }
 .btn-social {
-  display: inline-block;
   height: 50px;
   width: 50px;
-  border: 2px solid white;
-  border-radius: 100%;
   text-align: center;
   font-size: 1.5em;
   line-height: 45px;
 }
+
+
 .btn:focus,
 .btn:active,
 .btn.active {
